app/src/test/resources/programs/invalid/comments/commented_main.extention
// Invalid because there is no main function defined

// foo main() -> Int = { 
//     0
// }

/*
foo main() -> Int = {
    0
}
*/